objects/Student_Programme__c.object
<CustomObject><fields>
        <fullName>AD_Account__c</fullName>
        <label>AD Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Academic_Credit_Fee__c</fullName>
        <formula>IF( academic_credit__c = TRUE, 95.00, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only populated if Academic Credit is TRUE (checked)</inlineHelpText>
        <label>Academic Credit Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Academic_Year__c</fullName>
        <formula>Text (  Programme__r.Academic_Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Year</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Action_point_letter__c</fullName>
        <inlineHelpText>Date application approved subject to clarifications and action point letter sent</inlineHelpText>
        <label>Action point letter</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Agreed_Classification_Reason__c</fullName>
        <description>Required by Validation Rule when Agreed Classification value does not equal Inferred Classification value.</description>
        <inlineHelpText>Enter reason for manually overriding Agreed Classification</inlineHelpText>
        <label>Agreed Classification Reason</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Agreed_Classification__c</fullName>
        <description>Set by Set Agreed Classification workflow rule</description>
        <inlineHelpText>Set to Indicative Classification by default when Stage is set to Completed. 
Can be manually overridden as required.</inlineHelpText>
        <label>Agreed Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distinction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Populated by workflow - if EEA Student is true this takes Home/UE Fee, otherwise will take Overseas Fee (both from Programme level). Can be overwritten.</inlineHelpText>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Amount_of_Sponsorship_Funding__c</fullName>
        <label>Amount of Sponsorship/Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>App_not_register_6_month_extension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAF field 'If the applicant is unable to register on the date specified, will you allow registration to be extended by a period of 6 months?'</description>
        <label>App. not register, 6 month extension?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Applicant_response_received__c</fullName>
        <inlineHelpText>Date applicant response received by Quality Unit and forwarded to Chair</inlineHelpText>
        <label>Applicant response received</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Application_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the name of the member of staff who will review this application</inlineHelpText>
        <label>Application Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Reviewer</relationshipLabel>
        <relationshipName>Student_Programmes5</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Application_Source__c</fullName>
        <description>Created to flag paper applications for DTN Dec 14, but extended to cover other known acceptions to being created in MyLSTM</description>
        <inlineHelpText>Hidden, for reporting</inlineHelpText>
        <label>Application Source</label>
        <picklist>
            <picklistValues>
                <fullName>MyLSTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor supplied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Application_discussed_with_LSTM_details__c</fullName>
        <label>Application discussed with LSTM details</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Application_discussed_with_LSTM_staff__c</fullName>
        <inlineHelpText>Have you already been in discussion with a member of LSTM's academic staff about your application? (If yes, please specify)</inlineHelpText>
        <label>Application discussed with LSTM staff?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Appropriate_resources_and_facilities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SAF field 'Appropriate resources and facilities to undertake the planned research'</inlineHelpText>
        <label>Appropriate resources and facilities?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Arrangement_ensure_supervisors_engaged__c</fullName>
        <inlineHelpText>SAF field 'Arrangements to ensure that both the on-site and off-site supervisors are fully engaged in the supervision of the student, including supervisory meetings and annual monitoring'</inlineHelpText>
        <label>Arrangement ensure supervisors engaged</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Arrangement_student_access_skills_etc__c</fullName>
        <inlineHelpText>SAF field 'Arrangements for the student to access appropriate research skills training and professional development opportunities'</inlineHelpText>
        <label>Arrangement student access skills etc</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Assessed__c</fullName>
        <formula>IF(
OR(
Programme__r.Type__c = "MSc Programme",
Programme__r.Type__c = "Professional Diploma",
AND(Programme__r.Type__c = "Masters Module" , academic_credit__c=TRUE)),
TRUE,
FALSE)</formula>
        <inlineHelpText>Denotes whether this Student's Modules are entitled to be Assessed</inlineHelpText>
        <label>Assessed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Assessment_Deadline__c</fullName>
        <description>Manually completed as part of Registry process</description>
        <inlineHelpText>Enter the Assessment Deadline for this Student</inlineHelpText>
        <label>Assessment Deadline</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Assigned_Supervisors__c</fullName>
        <description>Holds string of User IDs for assigned supervisors</description>
        <label>Assigned Supervisors</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Audit_Log2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Year 2 of MSc Programme, to be replaced in phase 3 work</description>
        <label>Audit Log2</label>
        <referenceTo>SIS_Audit__c</referenceTo>
        <relationshipLabel>Student Programmes (Audit Log2)</relationshipLabel>
        <relationshipName>Student_Programmes1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Audit_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated by Visual Workflow</description>
        <label>Audit Log</label>
        <referenceTo>SIS_Audit__c</referenceTo>
        <relationshipLabel>Student Programmes</relationshipLabel>
        <relationshipName>Student_Programmes</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Audit_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden, for testing &amp; manual trigger of SIS Audit record</description>
        <label>Audit Trigger</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>BRP_Check__c</fullName>
        <inlineHelpText>Biometric Residence Permit, needed for international students as a UKBA requirement</inlineHelpText>
        <label>BRP Check</label>
        <picklist>
            <picklistValues>
                <fullName>Unverified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Bench_Fee_Amount_per_Annum__c</fullName>
        <inlineHelpText>SAF field 'If 'Yes' [to 'Will a bench fee be requested?'], state the amount per annum. Guidance on how to determine the level of bench is provided here.'</inlineHelpText>
        <label>Bench Fee Amount per Annum</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Breakdown_of_bench_fee__c</fullName>
        <inlineHelpText>SAF field 'Please provide a breakdown of the bench fee to be included in the offer letter. Standard text is provided here.'</inlineHelpText>
        <label>Breakdown of bench fee</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>CAS_Issued_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter LSTM staff member who issued the CAS</inlineHelpText>
        <label>CAS Issued By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAS_Issued_For</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>CAS_Notes__c</fullName>
        <label>CAS Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>CAS_Status__c</fullName>
        <label>CAS Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa Granted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa Refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>CRM_Temp_ID__c</fullName>
        <description>used for dataloads etc</description>
        <label>CRM Temp ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Cert_for_Approved_Country_Specific_Qual__c</fullName>
        <label>Cert for Approved Country Specific Qual</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Cert_for_English_Language_Test__c</fullName>
        <label>Cert for English Language Test</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Classification__c</fullName>
        <formula>IF ( TEXT(Stage__c)&lt;&gt;"Completed", "Not Completed", 
IF ( ISBLANK(Total_Module_Score__c), "Recalculate Module Scores", 
IF ( Total_Module_Score__c &lt; 49.5, "Fail", 
IF ( Total_Module_Score__c &lt; 59.5, "Pass", 
IF ( AND( Programme_Type__c = "Professional Diploma",  NOT(OR(Programme_Code__c = "DTN", Programme_Code__c ="DTM&amp;H")), Total_Module_Score__c &lt; 69.5), "Pass", 
IF ( Total_Module_Score__c &lt; 69.5, "Merit","Distinction") 
) 
)
)
)
)</formula>
        <label>Indicative Classification</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Collaborating_Partner__c</fullName>
        <description>For DipUKMP</description>
        <label>Collaborating Partner</label>
        <picklist>
            <picklistValues>
                <fullName>RCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCPCH</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Completed_Degree_Level_Qualification__c</fullName>
        <inlineHelpText>Antigua and Barbuda
Australia
the Bahamas
Barbados
Belize
Dominica
Grenada
Guyana
Jamaica
New Zealand
St Kitts and Nevis
St Lucia
St Vincent and the Grenadines
Trinidad and Tobago
USA</inlineHelpText>
        <label>Completed Degree Level Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Completed_Periods__c</fullName>
        <description>Roll up of Research Periods where Transition Completed = TRUE</description>
        <label>Completed Periods</label>
        <summaryFilterItems>
            <field>Research_Period__c.PAP_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Research_Period__c.Student_Programme__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Conditions_Acceptance__c</fullName>
        <label>Conditions Acceptance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Confirm_British_Irish_Nationality__c</fullName>
        <label>Confirm British/Irish Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Correspondence_Address__c</fullName>
        <description>For DipUKMP</description>
        <label>Correspondence Address</label>
        <picklist>
            <picklistValues>
                <fullName>UK Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Address</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Country_of_Issue__c</fullName>
        <label>Country of Issue</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas, The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory (BIOT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands [Virgin Islands, British]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei [Brunei Darussalam]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Created_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created In Portal</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Created_Week_No__c</fullName>
        <formula>IF(MOD(FLOOR( ( DATEVALUE(CreatedDate) - DATEVALUE("2006-09-01" ))/7),52)=0,52,MOD(FLOOR( ( DATEVALUE(CreatedDate) - DATEVALUE("2006-09-01" ))/7),52))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Week No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Credits__c</fullName>
        <description>Number of Academic credits calculated according to Entry Option</description>
        <formula>IF(TEXT(Exit_Option__c)="",
IF(ISPICKVAL( Entry_Option__c ,"MSc"),180,IF(ISPICKVAL( Entry_Option__c ,"PGDip"),120,IF(ISPICKVAL( Entry_Option__c ,"PGCert"),60,0))),
IF(ISPICKVAL( Exit_Option__c ,"MSc"),180,IF(ISPICKVAL( Exit_Option__c ,"PGDip"),120,IF(ISPICKVAL( Exit_Option__c ,"PGCert"),60,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Academic credits calculated according to Entry and Exit Options</inlineHelpText>
        <label>Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Criminal_Convictions_Details__c</fullName>
        <label>Criminal Convictions Details</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Current_User_Email__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>DPGR_Approval_Comments__c</fullName>
        <label>DPGR Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>DPGR_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PGR application approval field</description>
        <label>DPGR Approved</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Data_Protection_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Pre Reg process</description>
        <inlineHelpText>If checked the student had confirmed LSTM Data Protection policy in Pre Registration process</inlineHelpText>
        <label>Data Protection (Reg)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Returns Birthdate from Student record for Conga merging purposes. Temporary field - only required for 16/17 &amp; 17/18 transcripts.</description>
        <formula>Student__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_of_Interview__c</fullName>
        <label>Date of Interview</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Dean_Approval_Comments__c</fullName>
        <label>Dean Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Dean_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PGR application approval field</description>
        <label>Dean Approved</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Dedupe__c</fullName>
        <description>For deduplication reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dedupe#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Departure_Date__c</fullName>
        <description>Fieldwork Departure Date</description>
        <inlineHelpText>Select fieldwork departure date (Form 3)</inlineHelpText>
        <label>Departure Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Details_of_off_site_location_s__c</fullName>
        <inlineHelpText>SAF fiedl 'Details of off-site location(s)'</inlineHelpText>
        <label>Details of off-site location(s)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Disability__c</fullName>
        <label>Disability</label>
        <picklist>
            <picklistValues>
                <fullName>A disability, impairment or medical condition that is not listed above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A long standing illness or health condition such as cancer, HIV, diabetes, chronic heart disease, or epilepsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A mental health condition, such as depression, schizophrenia or anxiety disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A physical impairment or mobility issues, such as difficulty using arms or using a wheelchair or crutches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A social/communication impairment such as Asperger's syndrome/other autistic spectrum disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A specific learning difficulty such as dyslexia, dyspraxia or AD(H)D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blind or a serious visual impairment uncorrected by glasses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf or a serious hearing impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No known disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two or more impairments and/or disabling medical conditions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>DoNotContact__c</fullName>
        <formula>Student__r.DoNotContact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DoNotContact</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Do_you_have_a_Disability__c</fullName>
        <inlineHelpText>If you have any medical condition, physical or other disability of which the School should be aware, or which might call for special arrangements of facilities, you should attach a confidential letter.</inlineHelpText>
        <label>Do you have a Disability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Do_you_have_any_Criminal_Convictions__c</fullName>
        <inlineHelpText>If you do not answer this question, we cannot process your application. If you have answered yes, please give details of the conviction in terms of sentence served or caution received.</inlineHelpText>
        <label>Do you have any Criminal Convictions?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>EA_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ethics Approval attachments included with application</description>
        <inlineHelpText>Check box if attachments included with Ethics Application.</inlineHelpText>
        <label>EA Attachments</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EA_Email__c</fullName>
        <description>Date Ethics Application received by email.</description>
        <inlineHelpText>Enter the date the Ethics Application was received by email.</inlineHelpText>
        <label>EA Email</label>
        <type>Date</type>
    </fields><fields>
        <fullName>EA_Hard_Copy__c</fullName>
        <description>Date Ethics Application was received in hard copy.</description>
        <inlineHelpText>Enter the date the Ethics Application was received in hard copy.</inlineHelpText>
        <label>EA Hard Copy</label>
        <type>Date</type>
    </fields><fields>
        <fullName>EA_Modifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EA Modifications</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EA_Reviewer_1__c</fullName>
        <description>Ethics Panel Reviewer 1</description>
        <inlineHelpText>Enter the name of the Ethics Panel Reviewer 1</inlineHelpText>
        <label>EA Reviewer 1</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>EA_Reviewer_2__c</fullName>
        <description>Ethics Approval Reviewer 2</description>
        <inlineHelpText>Enter the name of the Ethics Panel Reviewer 2</inlineHelpText>
        <label>EA Reviewer 2</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>EA_Sequence__c</fullName>
        <description>Ethical Approval sequence number</description>
        <inlineHelpText>Enter the Ethical Approval sequence number</inlineHelpText>
        <label>EA Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>EA_Signed_by_Student__c</fullName>
        <description>Date Ethics Application signed.</description>
        <inlineHelpText>Enter the date the student signed the Ethics Application</inlineHelpText>
        <label>EA Signed by Student</label>
        <type>Date</type>
    </fields><fields>
        <fullName>EA_Signed_by_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Ethics Application signed by Supervisor</description>
        <inlineHelpText>Check box if Ethics Application signed by Supervisor</inlineHelpText>
        <label>EA Signed by Supervisor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EA_in_country__c</fullName>
        <description>Status of in-country Ethics Approval</description>
        <inlineHelpText>Status of in-country Ethics Approval</inlineHelpText>
        <label>EA (in-country)</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>EA_sent_to_R1__c</fullName>
        <description>Date EA sent to R1 for comments.</description>
        <inlineHelpText>Date EA sent to R1 for comments.</inlineHelpText>
        <label>EA sent to R1</label>
        <type>Date</type>
    </fields><fields>
        <fullName>EA_sent_to_R2__c</fullName>
        <description>Date EA sent to R2 for comments.</description>
        <inlineHelpText>Date EA sent to R2 for comments.</inlineHelpText>
        <label>EA sent to R2</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ECD_Address__c</fullName>
        <description>DipUKMP application required field</description>
        <label>ECD Address</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ECD_DoNotContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECD DoNotContact</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ECD_Name__c</fullName>
        <description>Abbreviated to Name in Pre-Reg page visible to applicants</description>
        <inlineHelpText>Name of person who is emergency contact</inlineHelpText>
        <label>ECD Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ECD_Phone__c</fullName>
        <description>Abbreviated to Telephone Number in Pre-Reg page visible to applicants, under ECD section</description>
        <inlineHelpText>Emergency contact details phone</inlineHelpText>
        <label>ECD Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>ECD_Relationship__c</fullName>
        <description>Abbreviated to Relationship in Pre-Reg page visible to applicants</description>
        <inlineHelpText>Relationship between applicant/student and emergency contact</inlineHelpText>
        <label>ECD Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>EEAStudent__c</fullName>
        <formula>Student__r.HESA_Nationality__r.EEA_Nationality__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Student (contact) record, based on their stated HESA Nationality</inlineHelpText>
        <label>EEA Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ELQ_Code__c</fullName>
        <description>Hidden, used in HESA reporting</description>
        <formula>IF ( TEXT(ELQ__c) = "Non-exempt ELQ", "01",
   IF ( TEXT(ELQ__c) = "Exempt ELQ", "02",
      IF ( TEXT(ELQ__c) = "Not ELQ", "03",
         IF ( TEXT(ELQ__c) = "Not Required", "09", 
         Null)
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ELQ Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ELQ__c</fullName>
        <description>Linked to ELQ_Code formula field</description>
        <inlineHelpText>Capture whether a student is aiming for an Equivalent or Lower Qualification than one already achieved; used in HESA reporting</inlineHelpText>
        <label>ELQ</label>
        <picklist>
            <picklistValues>
                <fullName>Non-exempt ELQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt ELQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not ELQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Employment__c</fullName>
        <label>Employment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>    </validationRules></CustomObject>